# django-api

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_bot_alter_chats_autor.py  0003_empreendimentos.py  0004_empreendimentos_autor_empreendimentos_data.py  0005_empreendimentos_local.py  0006_usuario_banner.py  0007_contatos_publicacao_delete_bot_and_more.py  0008_remove_usuario_banner_banner.py  0009_rename_foto1_banner_foto_remove_banner_foto2_and_more.py  0010_saq.py  0011_rename_resposta_saq_texto.py  0012_rename_publicacao_dolar_indice.py  0013_acoes.py  0014_acoes_curso_dolar_curso_indice_curso.py  0015_rename_instagram_contatos_link_remove_contatos_email_and_more.py
ulysses/: asgi.py  settings.py  urls.py  wsgi.py
uploader/: views.py
